kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nexus
  labels:
    app: nexus
spec:
  tls:
  - hosts:
    - nexus.leaguesandbox.gg
    secretName: nexus-prod-tls-cert
  rules:
  - host: nexus.leaguesandbox.gg
    http:
      paths:
      - backend:
          serviceName: nexus-backend
          servicePort: 8000
  backend:
    serviceName: nexus-backend
    servicePort: 8000
